[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "topolosses"
version = "0.1.1"
description = "A collection of losses and metrics for topology-preserving image segmentation."
readme = "topolosses/README.md"
authors = [
    { name = "Janek Falkenstein", email = "j.falkenstein@tum.de" }
]
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        # TODO add more classifiers
]
requires-python = ">=3.8"
# these are downloaded and installed beforehand
dependencies = [
    "torch>=1.9", 
    "scipy",
    "numpy"
]
# other libraries
# eigen3, boost are header only libraries and are not needed later on
# opencv can be bundled into the wheel afterwards with auditwheel repair (for this the needed libraries need to be installed locally) and needs pip install patchelf.

[project.urls]
Repository = "https://github.com/J-falkenstein/topolosses"

[tool.scikit-build]
wheel.packages = ["topolosses"]


## TODO all these settings can also be set by yml file env variables
# this is only for a local build on linux machine
[tool.cibuildwheel]
# currently this only creates x86_64 arch wheels
# these are overridden by the env varibales set in github action
archs = ["native"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y boost-devel python3-devel",
    "pip install 'pybind11[global]'",
    "ARCH=$(uname -m) && curl -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-${ARCH}.sh",
    "bash Miniconda3-latest-Linux-*.sh -b -p /opt/miniconda",
    "export PATH=/opt/miniconda/bin:$PATH",
    "conda init bash",
    "/opt/miniconda/bin/conda install -y -c conda-forge opencv",
    "/opt/miniconda/bin/conda install -y anaconda::eigen",
]
# opencv can be bundled into the wheel afterwards with auditwheel repair (for this the needed libraries need to be installed locally)
repair-wheel-command = "ARCH=$(uname -m) && LD_LIBRARY_PATH=/opt/miniconda/lib:$LD_LIBRARY_PATH auditwheel repair --plat manylinux_2_34_$ARCH -w {dest_dir} {wheel}"